--- a/app/stylesheets/site.scss
+++ b/app/stylesheets/site.scss
@@ -120,7 +120,8 @@
 .formContainer
 {
   //background-color: #F5EFC9;
-  background-color: #a9cff3;
+  //background-color: #a9cff3;
+  background-color: #eaf2f5;
   border:none;
   padding:30px;
   width: 600px;
