--- a/app/views/tasks/_tasks.html.haml
+++ b/app/views/tasks/_tasks.html.haml
@@ -56,7 +56,7 @@
     = image_tag('do.png')
     = '1.' + t('task.worker') + t('task.do')
     = image_tag('pay.png')
-    = '2.' + t('task.owner') + t('task.pay')
+    = '2.' + t('task.worker') + t('task.pay')
     = image_tag('truck.png')
     = '3.' + t('task.owner') + t('task.transport')
     = image_tag('finish.png')
