--- a/public/stylesheets/compiled/site.css
+++ b/public/stylesheets/compiled/site.css
@@ -154,21 +154,21 @@
 
 /* line 121, ../../../app/stylesheets/site.scss */
 .formContainer {
-  background-color: #a9cff3;
+  background-color: #eaf2f5;
   border: none;
   padding: 30px;
   width: 600px;
   margin: 50px auto;
 }
 
-/* line 130, ../../../app/stylesheets/site.scss */
+/* line 131, ../../../app/stylesheets/site.scss */
 .formContainer h3 {
   margin: 0px;
   padding: 0px 0px 10px 0px;
   font-size: 135%;
 }
 
-/* line 136, ../../../app/stylesheets/site.scss */
+/* line 137, ../../../app/stylesheets/site.scss */
 .rowContainer {
   width: 100%;
   overflow: hidden;
@@ -176,7 +176,7 @@
   height: 34px;
 }
 
-/* line 143, ../../../app/stylesheets/site.scss */
+/* line 144, ../../../app/stylesheets/site.scss */
 .rowContainer label {
   width: 140px;
   float: left;
@@ -184,12 +184,12 @@
   font-weight: bold;
 }
 
-/* line 150, ../../../app/stylesheets/site.scss */
+/* line 151, ../../../app/stylesheets/site.scss */
 .rowContainer input[type="text"] {
   width: 200px;
 }
 
-/* line 154, ../../../app/stylesheets/site.scss */
+/* line 155, ../../../app/stylesheets/site.scss */
 .tooltipContainer {
   height: 16px;
   font-size: 11px;
@@ -201,7 +201,7 @@
   padding: 0px 20px;
 }
 
-/* line 169, ../../../app/stylesheets/site.scss */
+/* line 170, ../../../app/stylesheets/site.scss */
 .error {
   color: #990000;
 }
@@ -210,7 +210,7 @@
 	Cusco Sky table styles
 	written by Braulio Soncco http://www.buayacorp.com
 */
-/* line 182, ../../../app/stylesheets/site.scss */
+/* line 183, ../../../app/stylesheets/site.scss */
 table, th, td {
   /*border: 1px solid #D4E0EE;*/
   border-collapse: collapse;
@@ -218,19 +218,19 @@ table, th, td {
   color: #555;
 }
 
-/* line 189, ../../../app/stylesheets/site.scss */
+/* line 190, ../../../app/stylesheets/site.scss */
 caption {
   font-size: 150%;
   font-weight: bold;
   margin: 5px;
 }
 
-/* line 195, ../../../app/stylesheets/site.scss */
+/* line 196, ../../../app/stylesheets/site.scss */
 td, th {
   padding: 4px;
 }
 
-/* line 199, ../../../app/stylesheets/site.scss */
+/* line 200, ../../../app/stylesheets/site.scss */
 thead th {
   border-bottom: 1px solid #D4E0EE;
   text-align: left;
@@ -239,46 +239,46 @@ thead th {
   font-size: 100% !important;
 }
 
-/* line 207, ../../../app/stylesheets/site.scss */
+/* line 208, ../../../app/stylesheets/site.scss */
 tbody th {
   font-weight: bold;
 }
 
-/* line 211, ../../../app/stylesheets/site.scss */
+/* line 212, ../../../app/stylesheets/site.scss */
 tbody tr {
   background: #FCFDFE;
   border-bottom: 1px solid #D4E0EE;
 }
 
-/* line 216, ../../../app/stylesheets/site.scss */
+/* line 217, ../../../app/stylesheets/site.scss */
 tbody tr.odd {
   background: #F7F9FC;
 }
 
-/* line 218, ../../../app/stylesheets/site.scss */
+/* line 219, ../../../app/stylesheets/site.scss */
 table a:link {
   color: #718ABE;
   text-decoration: none;
 }
 
-/* line 223, ../../../app/stylesheets/site.scss */
+/* line 224, ../../../app/stylesheets/site.scss */
 table a:visited {
   color: #718ABE;
   text-decoration: none;
 }
 
-/* line 228, ../../../app/stylesheets/site.scss */
+/* line 229, ../../../app/stylesheets/site.scss */
 table a:hover {
   color: #718ABE;
   text-decoration: underline !important;
 }
 
-/* line 233, ../../../app/stylesheets/site.scss */
+/* line 234, ../../../app/stylesheets/site.scss */
 tfoot th, tfoot td {
   font-size: 85%;
 }
 
-/* line 238, ../../../app/stylesheets/site.scss */
+/* line 239, ../../../app/stylesheets/site.scss */
 .shadow1 {
   box-shadow: 5px 5px #818181;
   -webkit-box-shadow: 5px 5px #818181;
@@ -291,7 +291,7 @@ tfoot th, tfoot td {
   border: 1px solid black;
 }
 
-/* line 250, ../../../app/stylesheets/site.scss */
+/* line 251, ../../../app/stylesheets/site.scss */
 .shadow {
   box-shadow: 7px 7px 8px #818181;
   -webkit-box-shadow: 7px 7px 8px #818181;
@@ -304,7 +304,7 @@ tfoot th, tfoot td {
   border: 1px solid black;
 }
 
-/* line 261, ../../../app/stylesheets/site.scss */
+/* line 262, ../../../app/stylesheets/site.scss */
 #tearshape {
   background: #f1f2f3;
   padding: 3px 5px;
@@ -317,7 +317,7 @@ tfoot th, tfoot td {
   -webkit-border-bottom-right-radius: 9px;
 }
 
-/* line 272, ../../../app/stylesheets/site.scss */
+/* line 273, ../../../app/stylesheets/site.scss */
 #roundshape {
   background: #eaf2f5;
   padding: 3px 5px;
@@ -329,7 +329,7 @@ tfoot th, tfoot td {
   -webkit-border-radius: 3px;
 }
 
-/* line 284, ../../../app/stylesheets/site.scss */
+/* line 285, ../../../app/stylesheets/site.scss */
 .round {
   background: #eaf2f5;
   padding: 3px 5px;
@@ -338,14 +338,14 @@ tfoot th, tfoot td {
   -webkit-border-radius: 5px;
 }
 
-/* line 292, ../../../app/stylesheets/site.scss */
+/* line 293, ../../../app/stylesheets/site.scss */
 .curlycontainer {
   border: 1px solid #b8b8b8;
   margin-bottom: 1em;
   width: 300px;
 }
 
-/* line 298, ../../../app/stylesheets/site.scss */
+/* line 299, ../../../app/stylesheets/site.scss */
 .curlycontainer .innerdiv {
   background: transparent url(brcorner.gif) bottom right no-repeat;
   position: relative;
@@ -354,7 +354,7 @@ tfoot th, tfoot td {
   padding: 1px 4px 15px 5px;
 }
 
-/* line 306, ../../../app/stylesheets/site.scss */
+/* line 307, ../../../app/stylesheets/site.scss */
 .bordershape {
   padding: 3px 5px;
   margin: 10px 10px 0 0;
@@ -363,12 +363,12 @@ tfoot th, tfoot td {
   -webkit-border-radius: 3px;
 }
 
-/* line 313, ../../../app/stylesheets/site.scss */
+/* line 314, ../../../app/stylesheets/site.scss */
 .bordershape a {
   text-decoration: none;
 }
 
-/* line 316, ../../../app/stylesheets/site.scss */
+/* line 317, ../../../app/stylesheets/site.scss */
 .solidshape {
   padding: 3px 5px;
   margin: 10px 10px 0 0;
@@ -377,7 +377,7 @@ tfoot th, tfoot td {
   -webkit-border-radius: 3px;
 }
 
-/* line 324, ../../../app/stylesheets/site.scss */
+/* line 325, ../../../app/stylesheets/site.scss */
 .fullshape {
   font-size: 14px;
   text-align: center;
@@ -394,7 +394,7 @@ tfoot th, tfoot td {
 /*html{font-size:62.5%}
 body{font-size:1.2em;color:#294f88}*/
 /*.customer_service {margin:10px;border:1px solid #92cdec;background:#d7e7ff;padding:30px 30px 0 30px}*/
-/* line 339, ../../../app/stylesheets/site.scss */
+/* line 340, ../../../app/stylesheets/site.scss */
 .customer_service {
   margin: 10px auto;
   background-color: white;
@@ -410,14 +410,14 @@ h2{margin:0;padding:10px 0 5px 0;font-size:1.5em;clear:both}
 p{font-size:1.2em;line-height:170%;margin-bottom:30px;clear:both}
 ul,ol{padding:0;margin:0;font-size:1.2em}
 */
-/* line 348, ../../../app/stylesheets/site.scss */
+/* line 349, ../../../app/stylesheets/site.scss */
 .customer_service h1 {
   margin: 0;
   padding: 0 0 10px 0;
   font-size: 1.2em;
 }
 
-/* line 349, ../../../app/stylesheets/site.scss */
+/* line 350, ../../../app/stylesheets/site.scss */
 .customer_service p {
   font-size: 1.2em;
   line-height: 170%;
@@ -425,14 +425,14 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   clear: both;
 }
 
-/* line 350, ../../../app/stylesheets/site.scss */
+/* line 351, ../../../app/stylesheets/site.scss */
 .customer_service ul, ol {
   padding: 0;
   margin: 0;
   font-size: 1em;
 }
 
-/* line 351, ../../../app/stylesheets/site.scss */
+/* line 352, ../../../app/stylesheets/site.scss */
 .customer_service ul, .customer_service ol {
   list-style-type: none;
   background: url(/images/dotted.gif) 0 0 repeat-x;
@@ -441,7 +441,7 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   margin: 0 10px 30px 0;
 }
 
-/* line 358, ../../../app/stylesheets/site.scss */
+/* line 359, ../../../app/stylesheets/site.scss */
 .customer_service li {
   background: url(/images/dotted.gif) bottom left repeat-x;
   width: 180px;
@@ -449,7 +449,7 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   padding: 0;
 }
 
-/* line 364, ../../../app/stylesheets/site.scss */
+/* line 365, ../../../app/stylesheets/site.scss */
 .customer_service li a {
   padding: 8px 20px 8px 0;
   width: 160px;
@@ -459,7 +459,7 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   color: #294f88;
 }
 
-/* line 365, ../../../app/stylesheets/site.scss */
+/* line 366, ../../../app/stylesheets/site.scss */
 .customer_service li a:hover {
   background-image: url(/images/arrow-right-dark.gif);
 }
