--- a/app/views/participants/_parts.html.haml
+++ b/app/views/participants/_parts.html.haml
@@ -1,3 +1,7 @@
+#wide
+  .bordershape
+    = image_tag('yes.png')
+    = '-' + t('participant.make_active')
 #equal-left
   %table
     %caption= t 'participant.customer'
@@ -17,11 +21,13 @@
         %td= participant.part_type
         %td= participant.part_id
         %td= participant.local_status
-        %td= convert_yes_no(participant.active)
+        %td
+          = convert_yes_no(participant.active)
+          = link_to image_tag('yes.png', :alt=>t('participant.make_active')), :controller=>'board', :action=>'active_participant', :id=>participant.id unless participant.active
         %td= participant.tasks.length
         %td= l participant.created_at, :format => :short
         %td= link_to image_tag('view.png'), participant
-        %td= link_to image_tag('edit.png'), edit_participant_path(participant)
+        %td=# link_to image_tag('edit.png'), edit_participant_path(participant)
         %td= link_to image_tag('delete.png'), participant, :confirm => t('site.are_you_sure'), :method => :delete if admin?
   = will_paginate @participants
 
@@ -44,10 +50,12 @@
         %td= participant.part_type
         %td= participant.part_id
         %td= participant.local_status
-        %td= convert_yes_no(participant.active)
+        %td
+          = convert_yes_no(participant.active)
+          = link_to image_tag('yes.png', :alt=>t('participant.make_active')), :controller=>'board', :action=>'active_participant', :id=>participant.id unless participant.active
         %td= Task.where(:shop => participant.part_id).length
         %td= l participant.created_at, :format => :short
         %td= link_to image_tag('view.png'), participant
-        %td= link_to image_tag('edit.png'), edit_participant_path(participant)
+        %td=# link_to image_tag('edit.png'), edit_participant_path(participant)
         %td= link_to image_tag('delete.png'), participant, :confirm => t('site.are_you_sure'), :method => :delete if admin?
   = will_paginate @shops
