--- a/app/views/tasks/show.html.haml
+++ b/app/views/tasks/show.html.haml
@@ -83,7 +83,14 @@
       = link_to @task.worker.username, @task.worker if @task.worker
     %br
     = t 'site.my_participants'
-    = @task.worker.active_participant.part_id if @task.worker
+    - if @task.worker
+      = @task.worker.active_participant.part_id 
+      = link_to "http://amos1.taobao.com/msg.ww?v=2&uid=#{@task.worker.active_participant.part_id}&s=2", :target=>'_black' do
+        = image_tag("http://amos1.taobao.com/online.ww?v=2&uid=#{@task.worker.active_participant.part_id}&s=2", :alt=>'点击这里给我发消息')
+    - if @task.worker.im_q
+      = link_to "tencent://message/?uin=#{@task.worker.im_q}&Site=&Menu=yes", :target=>'_black' do
+        = image_tag("http://wpa.qq.com/pa?p=1:#{@task.worker.im_q}:4", :alt=>'点击这里给我发消息')
+
     %br
     - if @task.worker and @task.worker.im_q
       = link_to "tencent://message/?uin=#{@task.worker.im_q}&Site=&Menu=yes", :target=>'_black' do
