--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -106,7 +106,7 @@ body {
     @include column(5);
   }
   #notice {
-    background-color: #eaf4f5;
+    background-color: #90ee90;
     height: 90%;
     width: 92%;
     margin: 1px auto;
