--- a/app/views/transactions/_form.html.haml
+++ b/app/views/transactions/_form.html.haml
@@ -14,6 +14,10 @@
       = f.input :name, :input_html => { :class => "validate[required]" }
       = f.input :amount, :input_html => { :class => "validate[required], min[0.01]" }
       = f.input :bank
+      %li
+        = label_tag t('formtastic.labels.transaction.account_name')
+        = f.autocomplete_field :account_name, autocomplete_user_username_transactions_path
+      = f.input :point, :input_html => { :class => "custom[number],min[0.01]" }
       = f.input :trade_time
       = f.input :description
     = f.commit_button
