--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -1105,7 +1105,7 @@ body #left {
 }
 /* line 108, ../../../app/stylesheets/screen.scss */
 body #notice {
-  background-color: #eaf4f5;
+  background-color: #90ee90;
   height: 90%;
   width: 92%;
   margin: 1px auto;
